[Fix] spacing and layout issues for course-grid

--- a/src/input.css
+++ b/src/input.css
@@ -14,8 +14,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 300;
-    src: url(/public/fonts/noto-sans-v37-latin-300italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-300italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -30,8 +29,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 400;
-    src: url(/public/fonts/noto-sans-v37-latin-italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -46,8 +44,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 500;
-    src: url(/public/fonts/noto-sans-v37-latin-500italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-500italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -62,8 +59,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 600;
-    src: url(/public/fonts/noto-sans-v37-latin-600italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-600italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -78,8 +74,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 700;
-    src: url(/public/fonts/noto-sans-v37-latin-700italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-700italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -94,8 +89,7 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 800;
-    src: url(/public/fonts/noto-sans-v37-latin-800italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-800italic.woff2) format("woff2");
     font-display: swap;
   }
 
@@ -110,18 +104,17 @@
     font-family: "NotoSans";
     font-style: italic;
     font-weight: 900;
-    src: url(/public/fonts/noto-sans-v37-latin-900italic.woff2)
-      format("woff2");
+    src: url(/public/fonts/noto-sans-v37-latin-900italic.woff2) format("woff2");
     font-display: swap;
   }
 }
 
 @layer components {
   .course-card-grid {
-    @apply grid [grid-template-columns:repeat(auto-fit,minmax(300px,max-content))] justify-center justify-items-center place-content-center gap-y-[20px] sm:gap-y-[30px] md:gap-y-10 gap-x-[20px] md:gap-x-10 mb-24;
+    @apply grid [grid-template-columns:repeat(auto-fit,minmax(300px,max-content))] lg:[grid-template-columns:repeat(auto-fit,minmax(360px,max-content))] xl:[grid-template-columns:repeat(auto-fit,minmax(380px,max-content))] justify-center justify-items-center place-content-center gap-y-[20px] sm:gap-y-[30px] md:gap-y-10 gap-x-[20px] md:gap-x-10 mb-24;
   }
 
   .course-card {
-    @apply flex flex-col items-center justify-between box-border max-w-[300px] md:max-w-[320px] lg:max-w-[345px] 2xl:max-w-[400px] gap-2 h-auto rounded-xl bg-navbar-color-pri p-5 border-2 border-b-6 border-color-border-pri hover:border-font-color-pri;
+    @apply flex flex-col items-center justify-between box-border w-[300px] md:w-[320px] lg:w-[345px] xl:w-[365px] 2xl:w-[380px] gap-2 h-auto rounded-xl bg-navbar-color-pri p-5 border-2 border-b-6 border-color-border-pri hover:border-font-color-pri;
   }
 }
